[project]
name = "personalized-content-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "apscheduler>=3.11.2",
    "chromadb>=1.5.5",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
